<resources>
    <string name="app_name">Hockey 2D</string>
    <string name="toggle">Toggle</string>
    <string name="size">Size</string>
    <string name="mass">Mass</string>
    <string name="coords">Coords</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="set">Set</string>
    <string name="speed">Speed</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="toggles">Toggles</string>
    <string name="gravitySwitch">Gravity</string>
    <string name="clear">Clear</string>
    <string name="new_game">New game</string>
    <string name="about">About</string>
    <string name="restart">Restart</string>
    <string name="blueWins">Blue wins</string>
    <string name="redWins">Red wins</string>
    <string name="about_text">This application works with our own physical engine. You can try its opportunities by clicking button below.</string>
    <string name="sandbox">Sandbox</string>
    <string name="paused">Paused</string>
    <string name="custom_game">Custom game</string>
    <string name="max_score">Max score</string>
    <string name="for_time">For time</string>
    <string name="game_mode">Game mode</string>
    <string name="time">Time</string>
    <string name="rounds">Rounds</string>
    <string-array name="gameModes">
        <item>Max score</item>
        <item>Time</item>
        <item>Max round count</item>
    </string-array>
    <string-array name="gameValues">
        <item>@string/max_score</item>
        <item>@string/time</item>
        <item>@string/rounds</item>
    </string-array>
    <string name="draw">Draw</string>
</resources>
