<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.physics2d.Visualizer
        android:id="@+id/visualizer"
        android:layout_width="1000px"
        android:layout_height="1000px"
        android:background="@drawable/view_border"
        android:clickable="false"
        android:keepScreenOn="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toggle"
        android:text="@string/toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visualizer" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:foreground="@drawable/ic_refresh_black_24dp"
        android:onClick="reloadFields"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visualizer" />

    <TextView
        android:id="@+id/number"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/size"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:text="@string/size"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <TextView
        android:id="@+id/mass"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:text="@string/mass"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/coords"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:onClick="spCd"
        android:text="@string/coords"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/mass" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:onClick="spCd"
        android:text="@string/speed"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/mass" />

    <Button
        android:id="@+id/prev"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:foreground="@drawable/ic_arrow_back_black_24dp"
        android:onClick="prev"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/next"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:foreground="@drawable/ic_arrow_forward_black_24dp"
        android:onClick="next"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/sizeAmount"
        android:layout_width="256dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/size"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toTopOf="@+id/size"
        android:autofillHints="" />

    <EditText
        android:id="@+id/massAmount"
        android:layout_width="256dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/mass"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toTopOf="@+id/mass" />

    <EditText
        android:id="@+id/xAmount"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/coords"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toTopOf="@+id/coords"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/xSpeed"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/coords"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toTopOf="@+id/coords"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/yAmount"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/coords"
        app:layout_constraintEnd_toEndOf="@+id/massAmount"
        app:layout_constraintTop_toTopOf="@+id/coords" />

    <EditText
        android:id="@+id/ySpeed"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/coords"
        app:layout_constraintEnd_toEndOf="@+id/massAmount"
        app:layout_constraintTop_toTopOf="@+id/coords" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="delete"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="@+id/coords"
        app:layout_constraintTop_toBottomOf="@+id/xAmount" />

    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="set"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="@+id/delete"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="@+id/delete" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:onClick="add"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/delete"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>